k8s/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: gestao-garantias-frontend-dev
  namespace: gestao-garantias-dev
spec:
  selector:
    app: gestao-garantias-frontend-dev
  ports:
    - port: 80
      targetPort: 80
